--- a/styles.css
+++ b/styles.css
@@ -111,12 +111,13 @@ label, input{
 
 /*<!-- Footer -->*/
 .footer {
-  position: inherit;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1rem;
-  background-color: #F2F1E8;
+  background-color: black;
+	color: white;
   text-align: center;
 }
 
