week-one-project

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,14 @@ label, input{
 }
 
 
+/*<1-- Table -->*/
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
 
 
 
