--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ light tan: #eeebda
 */
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, /*p,*/ blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -26,17 +26,17 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
+figure, figcaption, /*footer,*/ header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
-	padding: 0;
+	padding: 20;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
+/*HTML5 display-role reset for older browsers*/
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -62,32 +62,59 @@ table {
 
 
 
+
+
+
 body {
 	background-color: #F2F1E8;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Roboto', sans-serif;
 	position: relative;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
 	min-height: 100%;
 	line-height: 1.5;
-	width: auto;
-	height: auto;
+	width: 100%;
+	height: 100%;
 	padding: 150px;
+	/*margin-bottom: 50px;*/
+
 
 }
+
+
+logo {
+	width: 50%;
+	height: 50%;
+}
+
 
 
 .wrapper {
 	font-family: "Roboto", sans-serif;
-	display: flex;
-	justify-content: center;
-	padding: 10px;
+	/*display: block;*/
+	text-align: center;
+	/*justify-content: center;*/
+	background-color: #FFFFFF;
+	color: #2B2F26
+	padding: 2000px;
+	margin: 20px;
 }
 
-.img {
-	flex-direction: row;
-	flex-wrap: wrap;
+
+.wrapper:hover{
+    color: #CD5D67;
 }
+
+
+
+
+
+/*.image {
+	display: inline-block;
+	flex-direction: column;
+	/*flex-wrap: wrap;
+
+}*/
 
 
 
@@ -102,20 +129,13 @@ h1 {
 
 
 
-h1, h2, h3{
+h2, h3{
     font-family: "Roboto", sans-serif;
 		font-weight: bold;
+		text-align: center;
     /*margin-top: 0;*/
 
 }
-
-
-h1, h3 {
-	text-align: center;
-	font-weight: bold;
-}
-
-
 
 
 
@@ -127,6 +147,13 @@ h1, h3 {
 }
 
 
+/*.ul, li{
+	background-color: gray;
+	color: white;
+	padding: 10px;
+	margin-bottom: 10px;
+	width: 20%;
+}*/
 
 
 
@@ -135,7 +162,7 @@ h1, h3 {
 
 label, input{
     display: block;
-		
+
 }
 
 #submit{
@@ -143,9 +170,12 @@ label, input{
     background: #968772;
     border: none;
     outline: none;
-    margin: none;
+    margin: 20px;
     text-align: center;
     color: #F2F1E8;
+		/*display: block;*/
+		margin-left: auto;
+		margin-right: auto;
 }
 
 #submit:hover{
@@ -162,6 +192,7 @@ label, input{
 /*<!-- Footer -->*/
 .footer {
   position: relative;
+	top: 0;
   right: 0;
   bottom: 0;
   left: 0;
@@ -170,6 +201,31 @@ label, input{
 	color: white;
   text-align: center;
 }
+
+/*#site-footer {
+  background: #333;
+  display: flex;
+  color: white;
+  flex-direction: column-reverse;
+  width: 1000px;
+  text-align: right;
+}*/
+
+
+.signup,form,label,input {
+	/*display: block;*/
+	text-align: center;
+	/*display: inline-block;*/
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	padding: 10px;
+	width: 75%;
+}
+
+
+
+
 
 
 /*<1-- Table -->*/
@@ -182,6 +238,8 @@ table, th, td {
     border: 1px solid black;
 		padding: 10px;
 
+
+
 }
 
 
@@ -193,6 +251,166 @@ tr.t2 td {
 tr.t4 td {
 	background-color: rgb(241, 234, 221);
 	color: black;
+}
+
+/*.container {
+    width: 980px;
+    height: inherit;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+}*/
+
+/*.container, img {
+	width: auto;
+}*/
+
+
+.table {
+	font-family: "Roboto", sans-serif;
+	display: flex;
+	flex-direction: row;
+
+}
+
+
+
+/*.article1, .article2, .article3 {
+	font-family: "Roboto", sans-serif;
+	background-color: #F2F1E8;
+	padding: 10px;
+}*/
+
+
+/*div {
+	font-size: 0;
+}
+
+a {
+	display: inline-block;
+	margin-bottom: 10px;
+	width: calc (50% - 4px);
+	margin-right: 10px;
+}*/
+
+
+.image {
+	/*display: block;*/
+	text-align: center;
+	justify-content: center;
+
+
+}
+
+
+.desc {
+	width: 1100px;
+	/*display: block;*/
+	text-align: center;
+	justify-content: center;
+}
+
+
+
+
+
+/*h2 {
+	position: absolute;
+	top: 400px;
+	left: 0;
+	width: 100;
+	font-size: 10px;
+	background-color: black;
+	color: #F2F1E8;
+	font-size: 100%;
+	padding: 20px;
+
+}*/
+
+
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+		color: #F2F1E8;
+		background-color: black;
+		width: auto;
+}
+
+
+
+/*<!-- New Newsletter CSS -->*/
+
+.newsletter-pg {
+    background: url(project-files/optimized/background-2.jpg);
+    background-size: cover;
+    max-height: 100%;
+    max-width: 100%;
+}
+#newsletter-form {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+.form-box {
+    position: absolute;
+    background-color: #F2F1E8;
+    margin-top: 200px;
+    width: 60vw;
+    height: 60vh;
+    transition-delay: .15s;
+    overflow: scroll;
+}
+.form-box h1,
+.form-box h3 {
+    position: relative;
+    margin: 30px 10px;
+    text-align: center;
+}
+.form-input {
+    position: relative;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.line-one,
+.line-two {
+    border-bottom: 1px solid #968772;
+    border-bottom-width: medium;
+    font-size: 3vh;
+    margin-top: 8vh;
+    padding-bottom: 1vh;
+}
+.line-one input,
+.line-two input {
+    font-size: 3vh;
+    padding-left: 2%;
+    width: 75%;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    overflow: auto;
+}
+.submit {
+    position: relative;
+    text-align: center;
+    bottom: -10vh;
+    margin-bottom: 10%;
 }
 
 
